[package]
name = "pytest_typechecker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pytest_typechecker"
path = "src/main.rs"

[lib]
name = "pytest_typechecker"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.72"
bytecount = "0.6.3"
clap = { version = "4.3.12", features = ["derive"] }
colored = "2.0.4"
prettytable-rs = "0.10.0"
rustpython-ast = "0.3.0"
rustpython-format = "0.3.0"
rustpython-literal = "0.3.0"
rustpython-parser = "0.3.0"
rustpython-parser-core = "0.3.0"
rustpython-parser-vendored = "0.3.0"
test-case = "3.3.1"
walkdir = "2.3.3"
